syntax="proto3";

package user;

option go_package="../;services";

service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) {}
  rpc Login(LoginReq) returns (LoginResp) {}
  rpc UserInfo(UserReq) returns(UserResp) {}
  rpc Update(UpdateReq) returns(UpdateResp) {}
  rpc Delete(DeleteReq) returns(DeleteResp) {}
  rpc Logout(LogoutReq) returns(LogoutResp) {}
}

message RegisterReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp {
  int32 user_id = 1;
  string Token = 2; //用户鉴权token
}

message LoginReq {
  string email= 1;
  string password = 2;
}

message LoginResp {
  int32 user_id = 1;
  string Token = 2; //用户鉴权token
}


message UpdateReq {
  string name = 1;
  string email= 2;
  string password = 3;
  string avatar = 4;
  string backgroundImage = 5;
  string signature = 6;
  string token = 7;
  int32 user_id = 8;
}

message UpdateResp {
  int32 user_id = 1;
  string msg = 2;
}

message DeleteReq {
  string email= 1;
  string token = 2;
  int32 user_id = 3;
}

message DeleteResp {
  int32 user_id = 1;
  string msg = 2;
}

message LogoutReq {
  int32 user_id = 1;
  string token = 2;
}

message LogoutResp {
  int32 user_id = 1;
  string msg = 2;
}

message User {
  int32 user_id = 1; //用户id
  string email = 2; //用户email
}

message UserReq{
  int32 user_id = 1; //用户id
}

message UserResp{
  User User = 1; //用户信息
}